--- a/.github/workflows/build-jhoose-security-core.yml
+++ b/.github/workflows/build-jhoose-security-core.yml
@@ -39,10 +39,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal
       
     - name: nuget push
-      if: contains('
-        refs/heads/main
-        refs/heads/release
-      ', github.ref)    
+      if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release')
       working-directory: ./src/Jhoose.Security.Core
       run: dotnet nuget push "**/Jhoose.Security.Core.*.nupkg" -k ${{ env.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/andrewmarkham/index.json --skip-duplicate
       env:
