--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -58,10 +58,7 @@ jobs:
       run: dotnet test --configuration Release  --no-build --verbosity normal
     
     - name: nuget push
-      if: contains('
-        refs/heads/main
-        refs/heads/release
-      ', github.ref)
+      if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release')
       working-directory: ./src/Jhoose.Security
       run: dotnet nuget push "**/Jhoose.Security*.nupkg" -k ${{ env.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/andrewmarkham/index.json --skip-duplicate
       env:
