--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -49,7 +49,7 @@
 		<PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
 		<PackageReference Include="Microsoft.AspNet.WebApi.WebHost" Version="5.2.7" />
 
-    <PackageReference Include="Jhoose.Security.Core" Version="[1.2.*,2)" i Condition=" '$(Configuration)' == 'Release' " />
+    <PackageReference Include="Jhoose.Security.Core" Version="[1.2.*,2)" Condition=" '$(Configuration)' == 'Release' " />
 	</ItemGroup>
 	
   <ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
