--- a/src/Jhoose.Security/nuget.config
+++ b/src/Jhoose.Security/nuget.config
@@ -4,6 +4,6 @@
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="optimizley" value="https://nuget.optimizely.com/feed/packages.svc" />
-    <add key="Github" value="https://nuget.pkg.github.com/andrewmarkham/index.json" />
+    <add key="GithubAJM" value="https://nuget.pkg.github.com/andrewmarkham/index.json" />
   </packageSources>
 </configuration>
