--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -76,6 +76,7 @@
 
   <Content Remove="Jhoose.Security.Views\**" /> 
 
+  <!--  -->
   <Content Include="build\net5.0\Jhoose.Security.Admin.targets" PackagePath="build\net5.0\Jhoose.Security.Admin.targets" />
   <Content Include="build\net461\Jhoose.Security.Admin.targets" PackagePath="build\net461\Jhoose.Security.Admin.targets" />
 
@@ -87,10 +88,16 @@
 
   <Content Include="Jhoose.Security.Views\Views\**" Exclude="src\**\*">
     <Pack>true</Pack>
-    <PackagePath>content\any\any\modules\_protected\Jhoose.Security\Views;contentFiles\any\any\modules\_protected\Jhoose.Security\Views</PackagePath>
+    <PackagePath>content\any\any\modules\_protected\Jhoose.Security\Views</PackagePath>
     <PackageCopyToOutput>true</PackageCopyToOutput>
   </Content>
   
+  <Content Include="deploy\**" Exclude="src\**\*">
+    <Pack>true</Pack>
+    <PackagePath>content\any\any\</PackagePath>
+    <PackageCopyToOutput>true</PackageCopyToOutput>
+  </Content>
+
 </ItemGroup>
 
 </Project>
