Update to .net 6

--- a/src/Sample/DemoSite/appsettings.json
+++ b/src/Sample/DemoSite/appsettings.json
@@ -10,36 +10,36 @@
   "urls": "https://localhost:8001/;",
   "AllowedHosts": "localhost",
   "ConnectionStrings": {
-    "EPiServerDB": "Server=localhost;Database=EPiServerDB_2846bcb8;User Id=jhoose;Password=LetMeIn!;MultipleActiveResultSets=False"
+    "EPiServerDB": "Server=localhost;Database=EPiServerDB_2846bcb8;User Id=jhoose;Password=LetMeIn!;MultipleActiveResultSets=False;Encrypt=False"
   },
   "JhooseSecurity": {
-      "ExclusionPaths": [
-        "/episerver"
-      ],
-      "HttpsRedirection": true,
-      "StrictTransportSecurity": {
-        "MaxAge": 31536000,
-        "IncludeSubDomains": true
-      },
-      "XFrameOptions": {
-        "Enabled": false,
-        "Mode": 0,
-        "Domain": ""
-      },
-      "XPermittedCrossDomainPolicies": {
-        "Mode": 0
-      },
-      "ReferrerPolicy": {
-        "Mode": 0
-      },
-      "CrossOriginEmbedderPolicy": {
-        "Mode": 1
-      },
-      "CrossOriginOpenerPolicy": {
-        "Mode": 2
-      },
-      "CrossOriginResourcePolicy": {
-        "Mode": 1
-      }
+    "ExclusionPaths": [
+      "/episerver"
+    ],
+    "HttpsRedirection": true,
+    "StrictTransportSecurity": {
+      "MaxAge": 31536000,
+      "IncludeSubDomains": true
+    },
+    "XFrameOptions": {
+      "Enabled": false,
+      "Mode": 0,
+      "Domain": ""
+    },
+    "XPermittedCrossDomainPolicies": {
+      "Mode": 0
+    },
+    "ReferrerPolicy": {
+      "Mode": 0
+    },
+    "CrossOriginEmbedderPolicy": {
+      "Mode": 1
+    },
+    "CrossOriginOpenerPolicy": {
+      "Mode": 2
+    },
+    "CrossOriginResourcePolicy": {
+      "Mode": 1
     }
+  }
 }
