--- a/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
+++ b/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
@@ -1,45 +1,41 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-	<TargetFrameworks>net471;net5.0</TargetFrameworks>
-	  
-    <PackageId>Jhoose.Security.Core</PackageId>
-    <RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
-    <Version>1.2.2.0</Version>
-    <Authors>Andrew Markham</Authors>
-    <Title></Title>
-    <Description></Description>
-	  <Tags>Jhoose;Episerver;Optimizely;Content Security Policy</Tags>
-	  <ReleaseNotes>
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFrameworks>net471;net5.0;net6.0</TargetFrameworks>
+		<PackageId>Jhoose.Security.Core</PackageId>
+		<RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
+		<ProjectUrl>https://github.com/andrewmarkham/contentsecuritypolicy</ProjectUrl>
+		<Version>1.3.0.0</Version>
+		<Authors>Andrew Markham</Authors>
+		<Title>
+		</Title>
+		<Description>
+		</Description>
+		<Tags>Jhoose;Episerver;Optimizely;Content Security Policy</Tags>
+		<ReleaseNotes>
 		1.1.0 - Added the ability to output the recommended security headers.
 		1.1.1 - Added option to disable any of the recommended security headers.
-    1.2.0 - Target .Net Framework and Episerver 11
+		1.2.0 - Target .Net Framework and Episerver 11
+		1.3.0 - Add .Net 6 Support
 	  </ReleaseNotes>
-
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-
-    <RestoreSources>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<RestoreSources>
 		$(RestoreSources);
 		https://api.nuget.org/v3/index.json;
 		https://nuget.optimizely.com/feed/packages.svc;
 	</RestoreSources>
-
-  </PropertyGroup>
-
-<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
-  <PackageReference Include="EPiServer.Framework" Version="[12.0.3,13)" /> 
-  <PackageReference Include="EPiServer.Framework.AspNetCore" Version="[12.0.3,13)" /> 
-  
-  <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.0" />
-</ItemGroup>
-
-<ItemGroup Condition="'$(TargetFramework)' == 'net471'">
-  <PackageReference Include="EPiServer.Framework" Version="[11.1.0,12)" /> 
-  <PackageReference Include="EPiServer.Framework.AspNet" Version="[11.1.0,12)" />
-	<PackageReference Include="Newtonsoft.Json" Version="[9.0.1,14)" /> 
-</ItemGroup>
-
-<ItemGroup Condition="'$(TargetFramework)' == 'net471'">
-  <Reference Include="System.Web" />
-</ItemGroup>
+	</PropertyGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0' or '$(TargetFramework)' == 'net6.0'">
+		<PackageReference Include="EPiServer.Framework" Version="[12.0.3,13)" />
+		<PackageReference Include="EPiServer.Framework.AspNetCore" Version="[12.0.3,13)" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.0" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net471'">
+		<PackageReference Include="EPiServer.Framework" Version="[11.1.0,12)" />
+		<PackageReference Include="EPiServer.Framework.AspNet" Version="[11.1.0,12)" />
+		<PackageReference Include="Newtonsoft.Json" Version="[9.0.1,14)" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net471'">
+		<Reference Include="System.Web" />
+	</ItemGroup>
 </Project>
