--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -1,103 +1,90 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
-
-  <PropertyGroup>
-    <TargetFrameworks>net471;net5.0</TargetFrameworks>
-    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <PackageId>Jhoose.Security.Admin</PackageId>
-    <RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
-    <Version>1.2.2.0</Version>
-    <Authors>Andrew Markham</Authors>
-	  <Description>Interface to manage Content Security Policy </Description>
-  
-    <Title></Title>
-    <Tags>Jhoose;Episerver;Optimizely;Content Security Policy</Tags>
-    <ReleaseNotes>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk.Razor">
+	<PropertyGroup>
+		<TargetFrameworks>net471;net5.0;net6.0</TargetFrameworks>
+		<AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+		<PackageId>Jhoose.Security.Admin</PackageId>
+		<RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
+		<ProjectUrl>https://github.com/andrewmarkham/contentsecuritypolicy</ProjectUrl>
+		<Version>1.3.0.0</Version>
+		<Authors>Andrew Markham</Authors>
+		<Description>Interface to manage Content Security Policy </Description>
+		<Title>
+		</Title>
+		<Tags>Jhoose;Episerver;Optimizely;Content Security Policy</Tags>
+		<ReleaseNotes>
 		    1.1.0 - Added the ability to output the recommended security headers.
-        1.1.1 - Added option to disable any of the recommended security headers.
-        1.2.0 - Target .Net Framework and Episerver 11
+			1.1.1 - Added option to disable any of the recommended security headers.
+			1.2.0 - Target .Net Framework and Episerver 11
+			1.3.0 - Add .Net 6 Support
 	</ReleaseNotes>
-
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-
-    <RestoreSources Condition=" '$(Configuration)' == 'Debug' ">
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<RestoreSources Condition=" '$(Configuration)' == 'Debug' ">
 		  ../Jhoose.Security.Core/bin/Debug;
 		  https://api.nuget.org/v3/index.json;
 		  https://nuget.optimizely.com/feed/packages.svc;
 	  </RestoreSources>
-
-    <RestoreSources Condition=" '$(Configuration)' == 'Release' ">
+		<RestoreSources Condition=" '$(Configuration)' == 'Release' ">
 		  https://api.nuget.org/v3/index.json;
 		  https://nuget.optimizely.com/feed/packages.svc;
       https://nuget.pkg.github.com/andrewmarkham/index.json
 	  </RestoreSources>
-
-  </PropertyGroup>
-
-<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
-    <PackageReference Include="EPiServer.CMS.UI.Core" Version="[12.0.3,13)" />
-    <PackageReference Include="EPiServer.Framework.AspNetCore" Version="[12.0.3,13)" /> 
-    <PackageReference Include="EPiServer.Framework" Version="[12.0.3,13)" />
-	
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0" />
-    
-    <PackageReference Include="Jhoose.Security.Core" Version="[1.2.1,2)" Condition=" '$(Configuration)' == 'Release' " />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0" />
-</ItemGroup>
-
+	</PropertyGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0' or '$(TargetFramework)' == 'net6.0'">
+		<PackageReference Include="EPiServer.CMS.UI.Core" Version="[12.0.3,13)" />
+		<PackageReference Include="EPiServer.Framework.AspNetCore" Version="[12.0.3,13)" />
+		<PackageReference Include="EPiServer.Framework" Version="[12.0.3,13)" />
+		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0" />
+		<PackageReference Include="Jhoose.Security.Core" Version="[1.2.1,2)" Condition=" '$(Configuration)' == 'Release' " />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0" />
+	</ItemGroup>
 	<ItemGroup Condition="'$(TargetFramework)' == 'net471'">
 		<PackageReference Include="EPiServer.Framework" Version="[11.1.0,12)" />
 		<PackageReference Include="EPiServer.Framework.AspNet" Version="[11.1.0,12)" />
 		<PackageReference Include="EPiServer.CMS.UI.Core" Version="[11.1.0,12)" />
 		<PackageReference Include="EPiServer.ServiceLocation.StructureMap" Version="2.0.3" />
 		<PackageReference Include="Newtonsoft.Json" Version="[9.0.1,14)" />
-
 		<PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
 		<PackageReference Include="Microsoft.AspNet.WebApi.WebHost" Version="5.2.7" />
-
-    <PackageReference Include="Jhoose.Security.Core" Version="[1.2.1,2)" Condition=" '$(Configuration)' == 'Release' " />
+		<PackageReference Include="Jhoose.Security.Core" Version="[1.2.1,2)" Condition=" '$(Configuration)' == 'Release' " />
 	</ItemGroup>
-	
-  <ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
-    <ProjectReference Include="..\Jhoose.Security.Core\Jhoose.Security.Core.csproj" />
-  </ItemGroup>
-
-<Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition=" '$(Configuration)' == 'Debug' ">
-	<Exec Command="npm run publish" />
-</Target>
-
-<ItemGroup Label="Packaging">
-
-  <Content Remove="src\**" />
-  <Content Remove="node_modules\**" />
-  <Content Remove="dist\**" />
-  <Content Remove="modules\**" />
-  <Content Remove="*.json" /> 
-
-  <Content Remove="Jhoose.Security.Views\**" /> 
-
-  <!--  -->
-  <Content Include="build\net5.0\Jhoose.Security.Admin.targets" PackagePath="build\net5.0\Jhoose.Security.Admin.targets" />
-  <Content Include="build\net461\Jhoose.Security.Admin.targets" PackagePath="build\net461\Jhoose.Security.Admin.targets" />
-
-  <Content Include="dist\Jhoose.Security\**" Exclude="src\**\*">
-    <Pack>true</Pack>
-    <PackagePath>content\any\any\modules\_protected\Jhoose.Security;contentFiles\any\any\modules\_protected\Jhoose.Security</PackagePath>
-    <PackageCopyToOutput>true</PackageCopyToOutput>
-  </Content>
-
-  <Content Include="Jhoose.Security.Views\Views\**" Exclude="src\**\*">
-    <Pack>true</Pack>
-    <PackagePath>content\any\any\modules\_protected\Jhoose.Security\Views</PackagePath>
-    <PackageCopyToOutput>true</PackageCopyToOutput>
-  </Content>
-  
-  <Content Include="deploy\**" Exclude="src\**\*">
-    <Pack>true</Pack>
-    <PackagePath>content</PackagePath>
-    <PackageCopyToOutput>true</PackageCopyToOutput>
-  </Content>
-
-</ItemGroup>
-
+	<ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
+		<ProjectReference Include="..\Jhoose.Security.Core\Jhoose.Security.Core.csproj" />
+	</ItemGroup>
+	<Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition=" '$(Configuration)' == 'Debug' ">
+		<Exec Command="npm run publish" />
+	</Target>
+	<ItemGroup Label="Packaging">
+		<Content Remove="src\**" />
+		<Content Remove="node_modules\**" />
+		<Content Remove="dist\**" />
+		<Content Remove="modules\**" />
+		<Content Remove="*.json" />
+		<Content Remove="Jhoose.Security.Views\**" />
+		<!--  -->
+		<Content Include="build\net5.0\Jhoose.Security.Admin.targets" PackagePath="build\net5.0\Jhoose.Security.Admin.targets" />
+		<Content Include="build\net461\Jhoose.Security.Admin.targets" PackagePath="build\net461\Jhoose.Security.Admin.targets" />
+		<Content Include="dist\Jhoose.Security\**" Exclude="src\**\*">
+			<Pack>true</Pack>
+			<PackagePath>content\any\any\modules\_protected\Jhoose.Security;contentFiles\any\any\modules\_protected\Jhoose.Security</PackagePath>
+			<PackageCopyToOutput>true</PackageCopyToOutput>
+		</Content>
+		<Content Include="Jhoose.Security.Views\Views\**" Exclude="src\**\*">
+			<Pack>true</Pack>
+			<PackagePath>content\any\any\modules\_protected\Jhoose.Security\Views</PackagePath>
+			<PackageCopyToOutput>true</PackageCopyToOutput>
+		</Content>
+		<Content Include="deploy\**" Exclude="src\**\*">
+			<Pack>true</Pack>
+			<PackagePath>content</PackagePath>
+			<PackageCopyToOutput>true</PackageCopyToOutput>
+		</Content>
+	</ItemGroup>
+	<ItemGroup>
+		<None Remove="Microsoft.Extensions.Options.ConfigurationExtensions" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
+	</ItemGroup>
 </Project>
