--- a/src/Sample/DemoSite/DemoSite.csproj
+++ b/src/Sample/DemoSite/DemoSite.csproj
@@ -1,59 +1,61 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-
-	  <RestoreSources Condition=" '$(Configuration)' == 'Debug' ">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk.Web">
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<RestoreSources Condition=" '$(Configuration)' == 'Debug' ">
 		  $(RestoreSources);
 		  ../../Jhoose.Security/bin/Debug;
 		  ../../Jhoose.Security.Core/bin/Debug;
 		  https://api.nuget.org/v3/index.json;
 		  https://nuget.optimizely.com/feed/packages.svc;
-      https://nuget.pkg.github.com/andrewmarkham/index.json;
+          https://nuget.pkg.github.com/andrewmarkham/index.json;
+          https://nuget.pkg.github.com/made-to-engage//index.json;
 	  </RestoreSources>
-	  
-  </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="modules\_protected\Jhoose.Security\ClientResources\csp-app.js" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="modules\_protected\Jhoose.Security\ClientResources\csp-app.js">
-      <PackagePath>content\any\any\modules\_protected\Jhoose.Security;contentFiles\any\any\modules\_protected\Jhoose.Security</PackagePath>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-      <Pack>true</Pack>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Bogus" Version="34.0.1" />
-    <PackageReference Include="EPiServer.CMS" Version="12.3.1" />
-    <PackageReference Include="EPiServer.Framework" Version="12.3.0" />
-    <PackageReference Include="EPiServer.CMS.UI.Core" Version="12.3.1" />
-    <PackageReference Include="EPiServer.CMS.UI" Version="12.3.1" />
-    
-    <PackageReference Include="EPiServer.CMS.UI.VisitorGroups" Version="12.3.1" />
-    <PackageReference Include="EPiServer.CMS.TinyMce" Version="3.1.0" />
-    <PackageReference Include="EPiServer.Framework.AspNetCore" Version="12.3.0" />
-    
-    <Folder Include="wwwroot\" />
-    
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Jhoose.Security\Jhoose.Security.csproj">
-      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
-      <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Jhoose.Security.Core\Jhoose.Security.Core.csproj">
-      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
-      <Private>True</Private>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Update="modules\_protected\Jhoose.Security\module.config">
-      <PackagePath>content\any\any\modules\_protected\Jhoose.Security;contentFiles\any\any\modules\_protected\Jhoose.Security</PackagePath>
-      <PackageCopyToOutput>true</PackageCopyToOutput>
-      <Pack>true</Pack>
-    </Content>
-  </ItemGroup>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Remove="modules\_protected\Jhoose.Security\ClientResources\csp-app.js" />
+		<None Remove="UNRVLD.ODP.VisitorGroups" />
+		<None Remove="Microsoft.Extensions.DependencyInjection" />
+		<None Remove="Microsoft.Extensions.DependencyModel" />
+	</ItemGroup>
+	<ItemGroup>
+		<Content Include="modules\_protected\Jhoose.Security\ClientResources\csp-app.js">
+			<PackagePath>content\any\any\modules\_protected\Jhoose.Security;contentFiles\any\any\modules\_protected\Jhoose.Security</PackagePath>
+			<PackageCopyToOutput>true</PackageCopyToOutput>
+			<Pack>true</Pack>
+		</Content>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Bogus" Version="34.0.2" />
+		<PackageReference Include="EPiServer.CMS" Version="12.9.0" />
+		<PackageReference Include="EPiServer.Framework" Version="12.8.0" />
+		<PackageReference Include="EPiServer.CMS.UI.Core" Version="12.9.0" />
+		<PackageReference Include="EPiServer.CMS.UI" Version="12.9.0" />
+		<PackageReference Include="EPiServer.CMS.UI.VisitorGroups" Version="12.9.0" />
+		<PackageReference Include="EPiServer.CMS.TinyMce" Version="3.3.0" />
+		<PackageReference Include="EPiServer.Framework.AspNetCore" Version="12.8.0" />
+		<Folder Include="wwwroot\" />
+		<PackageReference Include="UNRVLD.ODP.VisitorGroups" Version="1.2.0.23" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="6.0.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\Jhoose.Security\Jhoose.Security.csproj">
+			<GlobalPropertiesToRemove>
+			</GlobalPropertiesToRemove>
+			<Private>True</Private>
+		</ProjectReference>
+		<ProjectReference Include="..\..\Jhoose.Security.Core\Jhoose.Security.Core.csproj">
+			<GlobalPropertiesToRemove>
+			</GlobalPropertiesToRemove>
+			<Private>True</Private>
+		</ProjectReference>
+	</ItemGroup>
+	<ItemGroup>
+		<Content Update="modules\_protected\Jhoose.Security\module.config">
+			<PackagePath>content\any\any\modules\_protected\Jhoose.Security;contentFiles\any\any\modules\_protected\Jhoose.Security</PackagePath>
+			<PackageCopyToOutput>true</PackageCopyToOutput>
+			<Pack>true</Pack>
+		</Content>
+	</ItemGroup>
 </Project>
