--- a/src/Sample/DemoSite461/packages.config
+++ b/src/Sample/DemoSite461/packages.config
@@ -17,6 +17,8 @@
   <package id="EPiServer.Search" version="9.0.3" targetFramework="net48" />
   <package id="EPiServer.Search.Cms" version="9.0.3" targetFramework="net48" />
   <package id="EPiServer.ServiceLocation.StructureMap" version="2.0.3" targetFramework="net48" />
+  <package id="Jhoose.Security.Admin" version="1.2.3.152" targetFramework="net48" />
+  <package id="Jhoose.Security.Core" version="1.2.3.163" targetFramework="net48" />
   <package id="log4net" version="2.0.8" targetFramework="net48" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net48" />
@@ -26,6 +28,9 @@
   <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net48" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net48" />
