--- a/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
+++ b/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
@@ -5,7 +5,7 @@
 		<PackageId>Jhoose.Security.Core</PackageId>
 		<RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
 		<ProjectUrl>https://github.com/andrewmarkham/contentsecuritypolicy</ProjectUrl>
-		<Version>1.3.0.0</Version>
+		<Version>1.4.0.0</Version>
 		<Authors>Andrew Markham</Authors>
 		<Title>
 		</Title>
@@ -17,6 +17,7 @@
 		1.1.1 - Added option to disable any of the recommended security headers.
 		1.2.0 - Target .Net Framework and Episerver 11
 		1.3.0 - Add .Net 6 Support
+		1.4.0 - Update minimum Optimizely requirements (12.4.0)
 	  </ReleaseNotes>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<RestoreSources>
@@ -26,8 +27,8 @@
 	</RestoreSources>
 	</PropertyGroup>
 	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0' or '$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="EPiServer.Framework" Version="[12.0.3,13)" />
-		<PackageReference Include="EPiServer.Framework.AspNetCore" Version="[12.0.3,13)" />
+		<PackageReference Include="EPiServer.Framework" Version="[12.4.0,13)" />
+		<PackageReference Include="EPiServer.Framework.AspNetCore" Version="[12.4.0,13)" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.0" />
 	</ItemGroup>
 	<ItemGroup Condition="'$(TargetFramework)' == 'net471'">
