--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -6,7 +6,7 @@
 		<PackageId>Jhoose.Security.Admin</PackageId>
 		<RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
 		<ProjectUrl>https://github.com/andrewmarkham/contentsecuritypolicy</ProjectUrl>
-		<Version>1.3.1.0</Version>
+		<Version>1.4.0.0</Version>
 		<Authors>Andrew Markham</Authors>
 		<Description>Interface to manage Content Security Policy </Description>
 		<Title>
@@ -17,6 +17,7 @@
 			1.1.1 - Added option to disable any of the recommended security headers.
 			1.2.0 - Target .Net Framework and Episerver 11
 			1.3.0 - Add .Net 6 Support
+			1.4.0 - Included support for the Optimizely nonce service.
 	</ReleaseNotes>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<RestoreSources Condition=" '$(Configuration)' == 'Debug' ">
@@ -31,13 +32,18 @@
 	  </RestoreSources>
 	</PropertyGroup>
 	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0' or '$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="EPiServer.CMS.UI.Core" Version="[12.0.3,13)" />
-		<PackageReference Include="EPiServer.Framework.AspNetCore" Version="[12.0.3,13)" />
-		<PackageReference Include="EPiServer.Framework" Version="[12.0.3,13)" />
+		<PackageReference Include="EPiServer.CMS.UI.Core" Version="[12.4.0,13)" />
+		<PackageReference Include="EPiServer.Framework.AspNetCore" Version="[12.4.0,13)" />
+		<PackageReference Include="EPiServer.Framework" Version="[12.4.0,13)" />
 		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0" />
-		<PackageReference Include="Jhoose.Security.Core" Version="[1.3.0,2)" Condition=" '$(Configuration)' == 'Release' " />
+		<PackageReference Include="Jhoose.Security.Core" Version="[1.4.0,2)" Condition=" '$(Configuration)' == 'Release' " />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0" />
 	</ItemGroup>
 	<ItemGroup Condition="'$(TargetFramework)' == 'net471'">
 		<PackageReference Include="EPiServer.Framework" Version="[11.1.0,12)" />
