WIP: remove opinionated approach to serialization of models for .net framework version

--- a/src/Tests/Jhoose.Security.Tests/Jhoose.Security.Tests.csproj
+++ b/src/Tests/Jhoose.Security.Tests/Jhoose.Security.Tests.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="EPiServer.Framework" Version="12.8.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\..\Jhoose.Security\Jhoose.Security.csproj" />
+	  <ProjectReference Include="..\..\Jhoose.Security.Core\Jhoose.Security.Core.csproj" />
+	  <ProjectReference Include="..\..\Jhoose.Security\Jhoose.Security.csproj" />
 	</ItemGroup>
 </Project>
