--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -46,7 +46,7 @@ jobs:
 
     - name: Build (Pre Release)
       if: github.ref != 'refs/heads/main'
-      run: dotnet build --configuration Release -p:Version=${{ env.BUILD_NO_PRE }}
+      run: dotnet build --configuration PreRelease -p:Version=${{ env.BUILD_NO_PRE }}
       working-directory: ./src/Jhoose.Security
 
 
