--- a/.github/workflows/build-jhoose-security.yml
+++ b/.github/workflows/build-jhoose-security.yml
@@ -8,8 +8,8 @@ on:
   workflow_dispatch:
 
 env:
-  BUILD_NO: 1.4.0.${{ github.run_number }}  
-  BUILD_NO_PRE: 1.4.0-rc.${{ github.run_number }} 
+  BUILD_NO: 1.5.0.${{ github.run_number }}  
+  BUILD_NO_PRE: 1.5.0-rc.${{ github.run_number }} 
 
 jobs:
   build:
@@ -17,10 +17,10 @@ jobs:
     runs-on: windows-2019
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3.3.0
 
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3.0.3
       with:
         dotnet-version: 6.0.x
 
@@ -28,10 +28,10 @@ jobs:
       working-directory: ./src/Jhoose.Security
       run: dotnet nuget add source https://nuget.pkg.github.com/andrewmarkham/index.json --name "GithubBuild" --store-password-in-clear-text --username andrewmarkham --password ${{ secrets.PACKAGE_TOKEN }}
 
-    - name: Use Node.js 14.4.0
-      uses: actions/setup-node@v1
+    - name: Use Node.js 16.0.0
+      uses: actions/setup-node@v3.6.0
       with:
-        node-version: 14.4.0  
+        node-version: 16.0.0  
 
     - name: Run node
       working-directory: ./src/Jhoose.Security
@@ -46,7 +46,7 @@ jobs:
 
     - name: Build (Pre Release)
       if: github.ref != 'refs/heads/main'
-      run: dotnet build --configuration Release -p:Version=${{ env.BUILD_NO_PRE }}
+      run: dotnet build --configuration PreRelease -p:Version=${{ env.BUILD_NO_PRE }}
       working-directory: ./src/Jhoose.Security
 
 
