--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ src/Sample/DemoSite461/bin/
 
 *.log
 
+
+src/Sample/DemoSite/App_Data/blobs/
+/src/Sample/DemoSite461/App_Data/EPiServerDB_13705f33.mdf
+/src/Sample/DemoSite461/App_Data/EPiServerDB_13705f33_log.ldf
