--- a/src/Tests/Jhoose.Security.Tests/Jhoose.Security.Tests.csproj
+++ b/src/Tests/Jhoose.Security.Tests/Jhoose.Security.Tests.csproj
@@ -10,15 +10,29 @@
 	</RestoreSources>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="NUnit" Version="3.13.1" />
-		<PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
-		<PackageReference Include="EPiServer.CMS.UI.Core" Version="12.9.0" />
-		<PackageReference Include="EPiServer.Framework.AspNetCore" Version="12.8.0" />
-		<PackageReference Include="EPiServer.Framework" Version="12.8.0" />
+		<PackageReference Include="NUnit" Version="3.13.3" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
+		<PackageReference Include="EPiServer.CMS.UI.Core" Version="12.16.0" />
+		<PackageReference Include="EPiServer.Framework.AspNetCore" Version="12.12.0" />
+		<PackageReference Include="EPiServer.Framework" Version="12.12.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+		<PackageReference Include="Castle.Core" Version="5.0.0" />
+		<PackageReference Include="NSubstitute" Version="4.4.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.3" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Jhoose.Security.Core\Jhoose.Security.Core.csproj" />
 	  <ProjectReference Include="..\..\Jhoose.Security\Jhoose.Security.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Remove="Services\" />
+	  <None Remove="Microsoft.AspNetCore.Http.Abstractions" />
+	  <None Remove="Castle.Core" />
+	  <None Remove="NSubstitute" />
+	  <None Remove="Microsoft.Extensions.Logging.Abstractions" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Services\" />
 	</ItemGroup>
 </Project>
