--- a/src/Jhoose.Security/Jhoose.Security.csproj
+++ b/src/Jhoose.Security/Jhoose.Security.csproj
@@ -6,11 +6,10 @@
 		<PackageId>Jhoose.Security.Admin</PackageId>
 		<RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
 		<ProjectUrl>https://github.com/andrewmarkham/contentsecuritypolicy</ProjectUrl>
-		<Version>1.5.0.0</Version>
+		<Version>1.5.1.0</Version>
 		<Authors>Andrew Markham</Authors>
-		<Description>Interface to manage Content Security Policy </Description>
-		<Title>
-		</Title>
+		<Description>Interface to manage Content Security Policy and OWASP Recomended response headers</Description>
+		<Title>Jhoose Security</Title>
 		<Tags>Jhoose;Episerver;Optimizely;Content Security Policy</Tags>
 		<ReleaseNotes>
 		    1.1.0 - Added the ability to output the recommended security headers.
@@ -22,6 +21,7 @@
 			        Handle duplicate headers as this caused site to crash
 					Handle CRLF in header value, changed to Space
 					Make caching threadsafe
+			1.5.1 - Removed Global Serialization settings for .Net Framework see issue #52 
 	</ReleaseNotes>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<RestoreSources Condition=" '$(Configuration)' == 'Debug' ">
@@ -37,16 +37,16 @@
 		<Configurations>Debug;Release;PreRelease</Configurations>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='PreRelease|net471|AnyCPU'">
-	  <DebugType>portable</DebugType>
+		<DebugType>portable</DebugType>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='PreRelease|net6.0|AnyCPU'">
-	  <DebugType>portable</DebugType>
+		<DebugType>portable</DebugType>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net471|AnyCPU'">
-	  <DebugType>embedded</DebugType>
+		<DebugType>embedded</DebugType>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0|AnyCPU'">
-	  <DebugType>embedded</DebugType>
+		<DebugType>embedded</DebugType>
 	</PropertyGroup>
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
 		<PackageReference Include="EPiServer.CMS.UI.Core" Version="[12.4.0,13)" />
