Add wss protocol and  extra reporting endpoint

--- a/src/Sample/DemoSite/DemoSite.csproj
+++ b/src/Sample/DemoSite/DemoSite.csproj
@@ -49,7 +49,8 @@
 			<Private>True</Private>
 		</ProjectReference>
 		<ProjectReference Include="..\..\Jhoose.Security\Jhoose.Security.csproj">
-		  <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+			<GlobalPropertiesToRemove>
+			</GlobalPropertiesToRemove>
 		</ProjectReference>
 	</ItemGroup>
 	<ItemGroup>
