--- a/src/Jhoose.Security/package.json
+++ b/src/Jhoose.Security/package.json
@@ -18,6 +18,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "body-parser": "^1.19.0",
+    "caniuse-lite": "^1.0.30001458",
     "express": "^4.17.3",
     "lokijs": "^1.5.11",
     "react-router-dom": "^5.2.0"
