--- a/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
+++ b/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
@@ -5,7 +5,7 @@
 		<PackageId>Jhoose.Security.Core</PackageId>
 		<RepositoryUrl>https://github.com/andrewmarkham/contentsecuritypolicy</RepositoryUrl>
 		<ProjectUrl>https://github.com/andrewmarkham/contentsecuritypolicy</ProjectUrl>
-		<Version>1.5.1.0</Version>
+		<Version>1.5.2.0</Version>
 		<Authors>Andrew Markham</Authors>
 		<Title>Jhoose Security Core</Title>
 		<Description>Core package used by the Jhoose Security module</Description>
@@ -20,6 +20,9 @@
 			    Handle duplicate headers as this caused site to crash
 				Handle CRLF in header value, changed to Space
 				Make caching threadsafe
+		1.5.1 - Removed Global Serialization settings for .Net Framework see issue #52
+		1.5.2 - Add support for ws and wss protocols
+			    Add support for seperate report-uri and report-to endpoints
 	  </ReleaseNotes>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<RestoreSources>
