Added Readonly mode support
Fixed issues #79, #80, #81
Updated Documentation

--- a/src/Sample/DemoSite/appsettings.json
+++ b/src/Sample/DemoSite/appsettings.json
@@ -23,7 +23,11 @@
             "ShouldMatchAll": "false"
           }
         }
+      },
+      "DataAccess": {
+
       }
+
     }
   },
   "JhooseSecurity": {
