Support to not fail when main application has different serialization settings

--- a/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
+++ b/src/Jhoose.Security.Core/Jhoose.Security.Core.csproj
@@ -37,6 +37,7 @@
 		https://api.nuget.org/v3/index.json;
 		https://nuget.optimizely.com/feed/packages.svc;
 	</RestoreSources>
+		<ReleaseVersion>2.1.0.0</ReleaseVersion>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
 		<LangVersion>latest</LangVersion>
