--- a/src/Tests/Jhoose.Security.Tests/Jhoose.Security.Tests.csproj
+++ b/src/Tests/Jhoose.Security.Tests/Jhoose.Security.Tests.csproj
@@ -8,6 +8,7 @@
 		https://api.nuget.org/v3/index.json;
 		https://nuget.optimizely.com/feed/packages.svc;
 	</RestoreSources>
+		<ReleaseVersion>2.1.0.0</ReleaseVersion>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="NUnit" Version="3.13.3" />
