--- a/src/Sample/DemoSite/DemoSite.csproj
+++ b/src/Sample/DemoSite/DemoSite.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<RestoreSources Condition=" '$(Configuration)' == 'Debug' ">
 		  $(RestoreSources);
 		  ../../Jhoose.Security/bin/Debug;
@@ -11,6 +11,7 @@
           https://nuget.pkg.github.com/andrewmarkham/index.json;
           https://nuget.pkg.github.com/unrvld/index.json;
 	  </RestoreSources>
+		<ReleaseVersion>2.1.0.0</ReleaseVersion>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Remove="modules\_protected\Jhoose.Security\ClientResources\csp-app.js" />
@@ -42,7 +43,6 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="8.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 	</ItemGroup>
-	<!--
 	<ItemGroup>
 		<ProjectReference Include="..\..\Jhoose.Security.Core\Jhoose.Security.Core.csproj">
 			<GlobalPropertiesToRemove>
@@ -61,5 +61,4 @@
 			<Pack>true</Pack>
 		</Content>
 	</ItemGroup>
-	-->
 </Project>
