--- a/src/Sample/DemoSite/appsettings.Development.json
+++ b/src/Sample/DemoSite/appsettings.Development.json
@@ -7,6 +7,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "urls": "http://*:8000/;https://*:8001/;",
+  "urls": "https://localhost:8001/;",
   "AllowedHosts": "*"
 }
